# LineVis

./: .gitignore  .gitmodules  CMakeLists.txt  DROID-SANS-LICENSE.txt  LICENSE  README.md  build-linux-vcpkg.sh  build-linux.sh  build-macos-brew.sh  build-macos-vcpkg.sh  build-msvc.bat  build-ubuntu.sh  build-windows-msys2.sh  build-windows.bat  build.bat  build.sh  shell.nix  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-brew.yml  build-linux.yml  build-msys2.yml  build-standalone.yml  build-ubuntu.yml  build-vcpkg.yml  release.yml  test-volumetric-path-tracing.yml
CMake/: FindSGL.cmake  FindTinyXML2.cmake  MacOSXBundleInfo.plist.in  StandaloneDeps.cmake  symbols_linux_gcc.map  winres.rc
Data/ReplayScripts/: barber_cam1.py  barber_cam1_sh.py  centrifugal_pump.py  centrifugal_pump_w2w.py  centrifugal_pump_w2w_deferred.py  helicity.py  lod.py  lod2.py  motivation.py  rendering.py  rendering_attributes.py  results.py  ribbon.py  ribbon_overview.py  upscale_rotate.py  upscale_zoom.py  upscale_zoom_fov.py  upscale_zoom_move.py  vortex_street.py
Data/ReplayScripts/modules/: campath.py
Data/Shaders/: Blit.glsl  GammaCorrection.glsl  GatherDummy.glsl  GaussianBlur.glsl  GlobalDefines.glsl  Mesh.glsl  Point.glsl  ResolveMSAA.glsl  TiledAddress.glsl  WhiteSolid.glsl
Data/Shaders/AO/: VectorBlit.glsl  VulkanAmbientOcclusionBaker.glsl  VulkanRayTracedAmbientOcclusion.glsl
Data/Shaders/Denoiser/: AlphaBlit.glsl  EAWDenoise.glsl  FeatureMapMerge.glsl  SH_Denoise.glsl  SVGF.glsl  VectorBlit.glsl  svgf_common.glsl
Data/Shaders/DepthCues/: ComputeDepthValues.glsl  MinMaxReduce.glsl  MinMaxReduceDepth.glsl
Data/Shaders/MultiVar/: MultiVarCheckerboard.glsl  MultiVarColorBands.glsl  MultiVarFibers.glsl  MultiVarGeometryUtils.glsl  MultiVarGlobalVariables.glsl  MultiVarGlobalVertexInput.glsl  MultiVarOrientedColorBands.glsl  MultiVarOrientedColorBandsRibbon.glsl  MultiVarRolls.glsl  MultiVarShadingUtils.glsl  MultiVarTwistedRolls.glsl
Data/Shaders/Renderers/: GeometryPassNormal.glsl  GeometryPassNormalBand.glsl  GeometryPassNormalTube.glsl  LineUniformData.glsl  MeshHull.glsl  Sphere.glsl
Data/Shaders/Scattering/: ComputeLineDensityField.glsl  LineDensityFieldDvrShader.glsl
Data/Shaders/Tubes/: CreateLineNormals.glsl  CreateTubeIndices.glsl  CreateTubePoints.glsl
Data/Shaders/Utils/: AmbientOcclusion.glsl  Antialiasing.glsl  ColorPack.glsl  DepthHelper.glsl  FloatPack.glsl  Lighting.glsl  TiledAddress.glsl  TransferFunction.glsl
Data/Shaders/Vulkan/: BarycentricInterpolation.glsl  ComputeLineDensityField.glsl  LineRenderSettings.glsl  MlatInsert.glsl  RayHitCommon.glsl  RayIntersectionTestsVulkan.glsl  RayTracedAmbientOcclusion.glsl  TestShader.glsl  TubeRayTracing.glsl  TubeRayTracingHeader.glsl  VulkanAmbientOcclusionBaker.glsl
Data/TransferFunctions/: Heatmap.xml  Viridis.xml  ViridisInverse.xml
Data/TransferFunctions/multivar/: blues.xml  browns.xml  emerald.xml  greens.xml  ocher.xml  oranges.xml  pale-lilac.xml  pinks.xml  purples.xml  reds.xml  turquoise.xml  yellows.xml
Data/TransferFunctions/stress/: Standard.xml  blues.xml  browns.xml  degeneracy.xml  greens.xml  greys.xml  oranges.xml  purples.xml  qualitative-emerald.xml  qualitative-ocher.xml  qualitative-pale-lilac.xml  reds.xml  tealblues.xml  teals.xml  warmgreys.xml
docs/compilation/: compilation_linux.md  compilation_msys.md  compilation_vcpkg.md
docs/license-libraries/: README.txt
docs/license-libraries/d3d12/: Info.txt  (+1 more)
docs/raytracing/: vulkan_raytracing.md
src/: Main.cpp  MainApp.cpp  MainApp.hpp
src/LineData/: LineData.cpp  LineData.hpp  LineDataFlow.cpp  LineDataFlow.hpp  LineDataHeader.hpp  LineDataMultiVar.cpp  LineDataMultiVar.hpp  LineDataMultiVarGui.cpp  LineDataRequester.cpp  LineDataRequester.hpp  LineDataStress.cpp  LineDataStress.hpp  LineRenderData.hpp  StressLineTracingRequester.cpp  StressLineTracingRequester.hpp
src/Loaders/: BinLinesLoader.cpp  BinLinesLoader.hpp  DataSetList.cpp  DataSetList.hpp  DegeneratePointsDatLoader.cpp  DegeneratePointsDatLoader.hpp  LineReader.cpp  LineReader.hpp  MeshSerializer.cpp  MeshSerializer.hpp  NetCdfConverter.cpp  NetCdfConverter.hpp  NetCdfLineLoader.cpp  NetCdfLineLoader.hpp  NetCdfLoader.cpp  NetCdfLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  StressTrajectoriesDatLoader.cpp  StressTrajectoriesDatLoader.hpp  Tokens.cpp  Tokens.hpp  TrajectoryFile.cpp  TrajectoryFile.hpp  TransformString.cpp  TransformString.hpp
src/Renderers/: DepthComplexityRenderer.cpp  DepthComplexityRenderer.hpp  DepthCues.cpp  DepthCues.hpp  HullRasterPass.cpp  HullRasterPass.hpp  LineRasterPass.cpp  LineRasterPass.hpp  LineRenderer.cpp  LineRenderer.hpp  MLABRenderer.cpp  MLABRenderer.hpp  OpacityOptimizationRenderer.cpp  OpacityOptimizationRenderer.hpp  OpaqueLineRenderer.cpp  OpaqueLineRenderer.hpp  PPLL.hpp  PerPixelLinkedListLineRenderer.cpp  PerPixelLinkedListLineRenderer.hpp  RenderingModes.hpp  ResolvePass.cpp  ResolvePass.hpp  SceneData.hpp  SyncMode.cpp  SyncMode.hpp  TilingMode.hpp
src/Utils/: AutomaticPerformanceMeasurer.cpp  AutomaticPerformanceMeasurer.hpp  CameraPath.cpp  CameraPath.hpp  CsvParser.cpp  CsvParser.hpp  CsvWriter.cpp  CsvWriter.hpp  ImportanceCriteria.cpp  ImportanceCriteria.hpp  IndexMesh.cpp  IndexMesh.hpp  InternalState.cpp  InternalState.hpp  MeshSmoothing.cpp  MeshSmoothing.hpp  TriangleNormals.cpp  TriangleNormals.hpp  VecStringConversion.cpp  VecStringConversion.hpp
src/Widgets/: CheckpointWindow.cpp  CheckpointWindow.hpp  ColorLegendWidget.cpp  ColorLegendWidget.hpp  DataView.cpp  DataView.hpp  ImGuiVerticalText.cpp  ImGuiVerticalText.hpp  MultiVarTransferFunctionWindow.cpp  MultiVarTransferFunctionWindow.hpp  ReplayWidget.cpp  ReplayWidget.hpp  StressLineHierarchyMappingWidget.cpp  StressLineHierarchyMappingWidget.hpp  TransferFunctionWindow.cpp  TransferFunctionWindow.hpp
test/: TestKdTreeNearestNeighbor.cpp  TestVolumetricPathTracing.cpp  VolumetricPathTracingTestData.cpp  VolumetricPathTracingTestData.hpp  VolumetricPathTracingTestRenderer.cpp  VolumetricPathTracingTestRenderer.hpp
(+389 files in other folders)
